# agent-bq

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
.claude/research/: current_deployment_analysis.md  eng_migration_spec.md  pm_migration_analysis.md  research_terraform_config_separation_20251009_152310.md  research_wheel_gcs_terraform_20251009_152440.md  terraform_agent_engine_research.md  ux_migration_design.md
.github/workflows/: claude.yaml  code-quality.yml  deploy-to-agent-engine.yaml  required-checks.yml
docs/: agentspace_registration.md  cicd_setup_github_actions.md  cicd_setup_google_cloud_build.md  code_quality_automation.md  customizing_agent.md  development.md  discoveryengine_api_agent_operations.md  environment_variables.md  observability.md
src/agent_bq/: agent.py  credentials.py  tools.py
src/agent_bq/deployment/: config.py  register_agent.py
src/agent_engine_cicd_base/: __init__.py  agent.py  callbacks.py  prompt.py  server.py  tools.py
src/agent_engine_cicd_base/deployment/: __init__.py  config.py  deploy_agent.py  init_template.py  register_agent.py  run_remote_agent.py
src/agent_engine_cicd_base/utils/: __init__.py  observability.py
terraform/: .terraform.lock.hcl  github.tf  iam.tf  locals.tf  outputs.tf  providers.tf  services.tf  terraform.tf  variables.tf
tests/: conftest.py  test_config.py
